<resources>
    <string name="app_name">Test Project</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="year">Date of birth:</string>
    <string name="choose_date">Choose Date</string>
    <string name="alert_dialog_title">Add new user:</string>
    <string name="edt_firstname">first name</string>
    <string name="edt_lastname">last name</string>
    <string name="edt_year">date of birth</string>
</resources>
