<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="#b7b7b7">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:background="?attr/colorPrimary">


        </android.support.v7.widget.Toolbar>>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:id="@+id/linearLayout">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"
                    android:textSize="15dp"
                    android:padding="5dp"
                    android:textColor="#000000"
                    android:id="@+id/textView" />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLength="10"
                    android:hint="@string/edt_firstname"
                    android:textSize="15dp"
                    android:padding="5dp"
                    android:textColor="#000000"
                    android:background="#a7838383"
                    android:id="@+id/firstName"
                    />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp"
            android:id="@+id/linearLayout2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textSize="15dp"
                android:padding="5dp"
                android:textColor="#000000"
                android:id="@+id/textView2" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="10"
                android:hint="@string/edt_lastname"
                android:textSize="15dp"
                android:padding="5dp"
                android:textColor="#000000"
                android:background="#a7838383"
                android:id="@+id/lastName"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year"
                android:textSize="15dp"
                android:padding="5dp"
                android:textColor="#000000"
                android:id="@+id/textView3" />
                <EditText
                    android:id="@+id/year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#a7838383"
                    android:focusable="false"
                    android:hint="@string/edt_year"
                    android:padding="5dp"
                    android:textColor="#000000"
                    android:textSize="15dp" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>