<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b7b7b7">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert_dialog_title"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="18dp"
        android:padding="5dp"
        android:textColor="#000000" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/first_name"
                android:textColor="#000000"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/firstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/textView3"
                android:layout_toRightOf="@+id/textView3"
                android:maxLength="10"
                android:hint="@string/first_name"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="#000000"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView"
                android:padding="5dp"
                android:text="@string/last_name"
                android:textColor="#000000"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/lastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/firstName"
                android:layout_toEndOf="@+id/textView3"
                android:layout_toRightOf="@+id/textView3"
                android:maxLength="10"
                android:hint="@string/last_name"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="#000000"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView2"
                android:padding="5dp"
                android:text="@string/year"
                android:textColor="#000000"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lastName"
                android:layout_toEndOf="@+id/textView3"
                android:layout_toRightOf="@+id/textView3"
                android:focusable="false"
                android:hint="@string/year"
                android:padding="5dp"
                android:singleLine="true"
                android:textColor="#000000"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/year"
                android:layout_alignRight="@+id/year"
                android:layout_below="@+id/year"
                android:text="Save" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/year"
                android:text="Cancel" />
        </RelativeLayout>

</LinearLayout>